--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fcoregen
 description: Fcore Gen Project
-version: 0.0.1
-homepage:
+version: 1.0.2
+homepage: https://tech.fighttech.vn/
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -18,5 +18,5 @@ dependencies:
   csv: ^5.0.0
 
 dev_dependencies:
-  pedantic: ^1.11.0
+  flutter_lints: ^1.0.3
   test: any
